fixed gap between contact me and footer

--- a/assets/styl.css
+++ b/assets/styl.css
@@ -85,7 +85,6 @@ nav a:last-child {
 
 main {
     margin-top: 20px;
-    margin-bottom: 0px;
 }
 
 .hero {
@@ -226,6 +225,7 @@ object-fit: fill;
     color: var(--tertiary);
     background-color: var(--black);
     text-decoration: none;
+    margin-bottom: 10px;
 }
 
 address {
@@ -242,5 +242,4 @@ footer {
     padding: .5% .5%;
     justify-content: center;
     text-align: center;
-    margin-top: 10px;
 }
